--- a/forumdisplay.htm
+++ b/forumdisplay.htm
@@ -113,11 +113,11 @@
                                 src="template/dean_tech_150528/images/luntan_lunbo07.png" title="公开课" alt=" 公开课"></a>
                     </div>
 					<!--<div class="item">-->
-                        <!--<a href="http://toefl.gmatonline.cn/" title="雷哥网学习平台"><img-->
+                        <!--<a href="http://www.toeflonline.cn/" title="雷哥网学习平台"><img-->
                                 <!--src="template/dean_tech_150528/images/luntan_lunbo08.png" title="雷哥网学习平台" alt=" 雷哥网学习平台"></a>-->
                     <!--</div>-->
 					<div class="item">
-                        <a href="http://toefl.gmatonline.cn/toeflcourses.html" title="雷哥网托福在线"><img
+                        <a href="http://www.toeflonline.cn/toeflcourses.html" title="雷哥网托福在线"><img
                                 src="template/dean_tech_150528/images/luntan_lunbo09.png" title="雷哥网托福在线" alt=" 雷哥网托福在线"></a>
                     </div>
 
